# aboutme

./: .env  .eslintrc.js  .gitignore  Pipfile  README.md  create_events.py  edit_configs.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vue-build.sh  vue-cli.sh  vue-sync.sh  vue.config.js
events/: events.json  events_backup.json  md_cli.mjs  notifications.json
events/codes/: en_test.md  mattermost_command.md  snowfight_ja.md
events/events_files/: 2020_proj.bib
events/researches/: 2020_projB_ja.md  en_test.md
public/: index.html
public/events/researches/: 2020_projA_en.md  2020_projA_ja.md  2020_projB_en.md  2020_projB_ja.md  ja_test.md
src/: App.vue  axios.js  i18n.js  main.js  mixin.js  router.js  store.js
src/components/: DisplayBibtex.vue  HeaderDefault.vue  HeaderTmp.vue  HighLights.vue  Notifications.vue
src/lang/: dictionary.json  head.csv  message.csv  notfound.csv  notready.csv  profile.csv
src/plugins/: markdown.js  markdown.styl
src/views/: Codes.vue  Datasets.vue  Event.vue  Home.vue  NotFound.vue  Papers.vue  Researches.vue  Resume.vue
