[tool.poetry]
name = "aboutme"
version = "0.1.0"
description = ""
authors = ["takuto <takutoitoi914@ruri.waseda.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
attrdict = "2.0.1"
beautifulsoup4 = "4.9.3"
colorama = "0.4.4"
commonmark = "0.9.1"
configparser = "5.0.2"
paramsparser = "2.1.0"
Pygments = "2.8.1"
PyYAML = "5.4.1"
rich = "9.13.0"
six = "1.15.0"
soupsieve = "2.2.1"
typing-extensions = "3.7.4.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
pylint = "^2.8.3"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
